// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Unstake > Claim Rewards operation > should render the claim rewards view 1`] = `
<div
  class="operation"
>
  <div
    class="dusk-wizard"
  >
    <div
      slot="stepper"
    >
      <div
        class="dusk-stepper dusk-stepper--variant--primary"
        style="--columns: 3; --progress-width: 0%;"
      >
        <span
          aria-current="step"
          aria-labelledby="step-some-generated-id"
          class="dusk-stepper__step dusk-stepper__step--processed"
        >
          1
        </span>
         
        <span
          class="dusk-stepper__step-label"
          id="step-some-generated-id"
        >
          Amount
           
        </span>
        <span
          aria-labelledby="step-some-generated-id"
          class="dusk-stepper__step"
        >
          2
        </span>
         
        <span
          class="dusk-stepper__step-label dusk-stepper__step-label--invisible"
          id="step-some-generated-id"
        >
          Overview
           
        </span>
        <span
          aria-labelledby="step-some-generated-id"
          class="dusk-stepper__step"
        >
          3
        </span>
         
        <span
          class="dusk-stepper__step-label dusk-stepper__step-label--invisible"
          id="step-some-generated-id"
        >
          Done
           
        </span>
        
      </div>
      
    </div>
     
     
     
    <div
      class="operation__amount-wrapper svelte-1p653d4"
    >
      <p>
        Amount:
      </p>
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          USE MAX
        </span>
      </button>
    </div>
     
    <div
      class="operation__input-wrapper svelte-1p653d4"
    >
      <input
        class="dusk-textbox dusk-textbox-number operation__input-field"
        max="345"
        required=""
        step="0.000000001"
        type="number"
      />
      
       
      <svg
        class="dusk-icon dusk-icon--size--default"
        data-tooltip-id="main-tooltip"
        data-tooltip-text="DUSK"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
        />
      </svg>
      
    </div>
     
    <div
      class="gas-settings svelte-1daay07"
    >
      <dl
        class="gas-settings__edit svelte-1daay07"
      >
        <div
          class="gas-fee svelte-1c6b481"
        >
          <span>
            Fee:
          </span>
           
          <div
            class="gas-fee__amount svelte-1c6b481"
          >
            <div
              class="gas-fee__amount-value svelte-1c6b481"
            >
              <span
                class="svelte-1c6b481"
              >
                max
              </span>
               
              <span
                class="svelte-1c6b481"
              >
                0.020000000
              </span>
            </div>
             
            <svg
              class="dusk-icon dusk-icon--size--default dusk-amount__icon"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="DUSK"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
              />
            </svg>
            
          </div>
        </div>
        <dd>
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              EDIT
            </span>
          </button>
        </dd>
      </dl>
       
    </div>
     
    
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          Next
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
          />
        </svg>
        
      </button>
    </div>
    
    
     
    
     
    
  </div>
</div>
`;

exports[`Unstake > Unstake operation > should render the unstake view 1`] = `
<div
  class="operation"
>
  <div
    class="dusk-wizard"
  >
    <div
      slot="stepper"
    >
      <div
        class="dusk-stepper dusk-stepper--variant--primary"
        style="--columns: 3; --progress-width: 0%;"
      >
        <span
          aria-current="step"
          aria-labelledby="step-some-generated-id"
          class="dusk-stepper__step dusk-stepper__step--processed"
        >
          1
        </span>
         
        <span
          class="dusk-stepper__step-label"
          id="step-some-generated-id"
        >
          Amount
           
        </span>
        <span
          aria-labelledby="step-some-generated-id"
          class="dusk-stepper__step"
        >
          2
        </span>
         
        <span
          class="dusk-stepper__step-label dusk-stepper__step-label--invisible"
          id="step-some-generated-id"
        >
          Overview
           
        </span>
        <span
          aria-labelledby="step-some-generated-id"
          class="dusk-stepper__step"
        >
          3
        </span>
         
        <span
          class="dusk-stepper__step-label dusk-stepper__step-label--invisible"
          id="step-some-generated-id"
        >
          Done
           
        </span>
        
      </div>
      
    </div>
     
     
     
    <div
      class="operation__amount-wrapper svelte-1p653d4"
    >
      <p>
        Amount:
      </p>
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          USE MAX
        </span>
      </button>
    </div>
     
    <div
      class="operation__input-wrapper svelte-1p653d4"
    >
      <input
        class="dusk-textbox dusk-textbox-number operation__input-field"
        max="278"
        min="false"
        required=""
        step="0.000000001"
        type="number"
      />
      
       
      <svg
        class="dusk-icon dusk-icon--size--default"
        data-tooltip-id="main-tooltip"
        data-tooltip-text="DUSK"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
        />
      </svg>
      
    </div>
     
    <div
      class="gas-settings svelte-1daay07"
    >
      <dl
        class="gas-settings__edit svelte-1daay07"
      >
        <div
          class="gas-fee svelte-1c6b481"
        >
          <span>
            Fee:
          </span>
           
          <div
            class="gas-fee__amount svelte-1c6b481"
          >
            <div
              class="gas-fee__amount-value svelte-1c6b481"
            >
              <span
                class="svelte-1c6b481"
              >
                max
              </span>
               
              <span
                class="svelte-1c6b481"
              >
                0.020000000
              </span>
            </div>
             
            <svg
              class="dusk-icon dusk-icon--size--default dusk-amount__icon"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="DUSK"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
              />
            </svg>
            
          </div>
        </div>
        <dd>
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              EDIT
            </span>
          </button>
        </dd>
      </dl>
       
    </div>
     
    
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          Next
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
          />
        </svg>
        
      </button>
    </div>
    
    
     
    
     
    
  </div>
</div>
`;
